<?xml version="1.0"?>
<package>
  <name>imu_3dm_gx</name>
  <version>0.0.0</version>
  <description>The imu_3dm_gx package</description>

  <maintainer email="nmichael@cmu.edu">Nathan Michael</maintainer>
  <license>Internal-Use Only</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>asio_serial_device</build_depend>
  <build_depend>geographiclib</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>asio_serial_device</run_depend>
  <run_depend>geographiclib</run_depend>
</package>
